language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_external_imported_function_nested_module.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport my/nested/example_module\nfn main() {\n    example_module.my_fn\n}\n"
---

import my/nested/example_module
fn main() {
    example_module.my_fn
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑▔
}


----- Hover content (markdown) -----
```gleam
fn() -> Nil
```

View on [HexDocs](https://hex.hexdocs.pm/my/nested/example_module.html#my_fn)
