language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_external_imported_function_renamed_module.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport example_module as renamed_module\nfn main() {\n    renamed_module.my_fn\n}\n"
---

import example_module as renamed_module
fn main() {
    renamed_module.my_fn
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑▔
}


----- Hover content (markdown) -----
```gleam
fn() -> Nil
```

View on [HexDocs](https://hex.hexdocs.pm/example_module.html#my_fn)
