language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_external_imported_unqualified_constants.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport example_module.{my_const}\nfn main() {\n  my_const\n}\n"
---

import example_module.{my_const}
fn main() {
  my_const
  ▔▔▔↑▔▔▔▔
}


----- Hover content (markdown) -----
```gleam
Int
```

View on [HexDocs](https://hex.hexdocs.pm/example_module.html#my_const)
