language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_external_imported_unqualified_function.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport example_module.{my_fn}\nfn main() {\n  my_fn\n}\n"
---

import example_module.{my_fn}
fn main() {
  my_fn
  ▔▔▔↑▔
}


----- Hover content (markdown) -----
```gleam
fn() -> Nil
```

View on [HexDocs](https://hex.hexdocs.pm/example_module.html#my_fn)
