language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_external_value_with_two_modules_same_name.snap
---
source: language-server/src/tests/hover.rs
expression: "\nimport a/example_module as _\nimport b/example_module\nfn main() {\n    example_module.my_const\n}\n"
---

import a/example_module as _
import b/example_module
fn main() {
    example_module.my_const
    ▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔▔↑▔▔▔▔
}


----- Hover content (markdown) -----
```gleam
Int
```

View on [HexDocs](https://hex.hexdocs.pm/b/example_module.html#my_const)
