language-server/src/tests/snapshots/gleam_language_server__tests__hover__hover_for_constant_bit_array.snap
---
source: language-server/src/tests/hover.rs
expression: "\nconst bits = <<1:2, 3:4>>\n"
---

const bits = <<1:2, 3:4>>
                 ▔↑      


----- Hover content (markdown) -----
```gleam
Int
```
